--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
             overflow: hidden;
             border-radius: 10px;
         }
+        .conf-picture {
+            background: url('roger.jpg') cover no-repeat;
+            width: 60px;
+            height: 60px;
+        }
         .conf-username {
             font-size: 5em;
             font-weight: 600;
@@ -122,6 +127,7 @@
 <body ng-app="srGithubApp" ng-controller="homeController">
 
     <div class="conf-container">
+        <div class="conf-picture"></div>
         <div class="conf-username">Roog</div>
         <div class="conf-name">Roger Sandholm</div>
 
