--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         .conf-picture {
 
         }
+        image {
+            clip-path: url(#svgPath);
+        }
         .conf-username {
             font-size: 5em;
             font-weight: 600;
